<resources>

    <string name="app_name">NetInfService</string>
    <string name="title_activity">NetInfService</string>
    <string name="go">GO</string>
    
    <string name="dialog_share_msg">To improve your browsing experience, we recommend you to share the content
        you are browsing. This will require Bluetooth connectivity. Do you want to turn Bluetooth on?</string>
    <string name="dialog_share_title">Share content?</string>
    <string name="dialog_wifi_msg">This application requires WiFi connection. Please select a network:</string>
    <string name="dialog_wifi_title">Select WiFi connection</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
   
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    
    <string name="settings">Settings</string>
    <string name="sharing_category">Sharing</string>
    
    <string name="fullput_title">Upload webpages</string>
    <string name="fullput_summary_on">Uploads visted webpages</string>
    <string name="fullput_summary_off">Does not upload</string>

    
    <string name="publish_title">Publish webpages</string>
    <string name="publish_summary_on">Tell people that I have webpages to share</string>
    <string name="publish_summary_off">Do not tell people that I have webpages to share</string>
    
    <string name="netinf_category">NetInf Settings</string>
    <string name="netinf_title">NetInf</string>

    <string name="settings_share">Bluetooth Sharing</string>
    <string name="sharing_summary_on">Bluetooth sharing enabled</string>
    <string name="sharing_summary_off">Bluetooth sharing disabled</string>
    <string name="settings_nrs_category">Name Resolution Service Settings</string>
    <string name="settings_nrs">Name Resolution Service</string>
    
    <string name="help">Help</string>
    
    <string name="help_share_title">Sharing Options</string>
    <string name="help_share_text">Sharing improves your browsing experience using Bluetooth. Sharing therefore
        requires Bluetooth to be enabled.</string>
    
    <string name="help_wifi_title">WiFi Connection</string>
    <string name="help_wifi_text">The application requires a Name Resolution Service (NRS) 
        to work. For this to be available, you need to be connected to the Wi-Fi network providing it.</string>
        
    <string name="help_fullput_title">Upload web pages</string>
    <string name="help_fullput_text">When you upload the web pages that you have browsed, other users can
        download them faster. Turn on or off this option in the settings menu.</string>
        
    <string name="help_nrs_title">Name Resolution Service</string>
    <string name="help_nrs_text">The Name Resolution Service (NRS) is required for the application to work. 
        You can change the connection to a new NRS in the settings menu.</string>
        

</resources>