<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical"
              android:padding="10dp" >
    <TextView android:id="@+id/text1"
              style="@android:style/TextAppearance.Large"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_wifi_title" />
    <TextView android:id="@+id/text2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_wifi_text"/>
    <View 	  android:background="#2F4F4F" 
			  android:layout_width = "fill_parent"
			  android:layout_height="1dip"/>
    <TextView android:id="@+id/text3"
              style="@android:style/TextAppearance.Large"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_share_title" />
    <TextView android:id="@+id/text4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_share_text" />
    <View 	  android:background="#2F4F4F" 
			  android:layout_width = "fill_parent"
			  android:layout_height="1dip"/>
    <TextView android:id="@+id/text5"
              style="@android:style/TextAppearance.Large"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_fullput_title" />
    <TextView android:id="@+id/text6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_fullput_text" />
    <View 	  android:background="#2F4F4F" 
			  android:layout_width = "fill_parent"
			  android:layout_height="1dip"
			  android:paddingTop="5dp"/>
    <TextView android:id="@+id/text7"
              style="@android:style/TextAppearance.Large"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_nrs_title" />
    <TextView android:id="@+id/text8"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/help_nrs_text" />
</LinearLayout>